discussion/kv_engine/185961/185961_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge commit 'eef0b81db' from neo into master

* commit 'eef0b81db':
  MB-54553: Flusher deduplication skips history-enabled collections

Change-Id: I1ae7725fb50d7eae9d4050a0527b75e2fd92cfb1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2023-02-01 14:55:22.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2023-02-01 15:13:18.000000000
Message: 
Patch Set 1: Code-Review-1
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-01 15:22:35.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22572/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:2657:76: error: too few arguments to function call, expected 2, have 1 [clang-diagnostic-error]
        vb->updateFromManifest(Collections::Manifest{std::string{manifest}});
                                                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.h:787:5: note: "updateFromManifest" declared here
    Collections::VB::ManifestUpdateStatus updateFromManifest(
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:2660:37: error: too many arguments to function call, expected 0, have 1 [clang-diagnostic-error]
        manager.createNewCheckpoint(true);
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:385:5: note: "createNewCheckpoint" declared here
    uint64_t createNewCheckpoint();
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22572/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:2657:76:
error: too few arguments to function call, expected 2, have 1 [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22572/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51967/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\evp_store_test.cc(2657): error C2660: "VBucket::updateFromManifest": function does not take 1 arguments ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51967/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12381/ : FAILURE

Compile error at [2023-02-01T15:21:54.403Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:2657:76:
error: no matching function for call to ?VBucket::updateFromManifest(Collections::Manifest)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12381/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24169/ : FAILURE

Compile error at [2023-02-01T15:03:20.186Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:2657:76:
error: too few arguments to function call, expected 2, have 1
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24169/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12297/ : FAILURE

Compile error at [2023-02-01T14:56:54.114Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:2657:76:
error: too few arguments to function call, expected 2, have 1
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12297/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1343/ : FAILURE

Compile error at [2023-02-01T15:05:25.727Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:2657:76:
error: no matching function for call to ?VBucket::updateFromManifest(Collections::Manifest)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1343/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25920/ : FAILURE

Compile error at [2023-02-01T15:01:54.995Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:2657:76:
error: too few arguments to function call, expected 2, have 1
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25920/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25050/ : FAILURE

Compile error at [2023-02-01T15:03:29.467Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:2657:76:
error: no matching function for call to ?VBucket::updateFromManifest(Collections::Manifest)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25050/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33045/ : FAILURE

Compile error at [2023-02-01T14:59:04.361Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_test.cc:2657:76:
error: too few arguments to function call, expected 2, have 1
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33045/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43609/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22494/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24625/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
